--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ header img{
 	width: 100%;
 	height: 200px;
 }
-#content{
+.contenido{
 	margin-top: 200px;
 	background-color: #A9A2A2;
 	color: #FFFFFF;
@@ -40,13 +40,13 @@ header img{
 	position: fixed;
 	bottom: 0%;
 }
-p.subir{
+.subir{
 		  display: none;
 		  position:fixed;
 		  right: 5%;
 		  bottom: 50px;
-		  background-color: #DACE24FF;
+		  background-color: #DACE24;
+		  color: #000000;
 		  padding: 10px;
-		  color:white;
 		  cursor:pointer;
 		}
